# actor-framework

./: .cirrus.yml  .clang-format  .clang-tidy  .cmake-format.py  .codedocs  .cppcheck-suppressions  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yaml  .typos-config.toml  .ycm_extra_conf.py  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Doxyfile  Doxyfile.in  FindOPENCL.cmake  FindPTHREAD.cmake  HACKING.md  Jenkinsfile  LICENSE  Makefile  Makefile.am  Makefile.rules  PR_2154_SUMMARY.md  README  README.md  README_caf_error_finder.md  _formulas.tex  annotated.html  announce_example_1  announce_example_1_8cpp-example.html  announce_example_2_8cpp-example.html  announce_example_3  announce_example_3_8cpp-example.html  (+143 more)
benchmarks/: ActorCreation.scala  CMakeLists.txt  Distributed.scala  DistributedRemoteActors.scala  MailboxPerformance.scala  Makefile.am  Matching.scala  MixedCase.scala  PingPong.scala  actor_creation  actor_creation.cpp  actor_creation.erl  application.conf  cppa_test.sh  distributed.cpp  distributed.erl  erlang_test.sh  exec.sh  exec_util.sh  mailbox_performance.cpp  matching.cpp  mixed_case.cpp  mixed_case.erl  mixed_case_libprocess.cpp  mk_erlang.sh  mk_mixed_case_libprocess.sh  mk_scala.sh  mk_theron.sh  record_mem_usage.sh  run_benchmarks.sh  scala_test.sh  theron_actor_creation.cpp  theron_mailbox_performance.cpp  theron_mixed_case.cpp  theron_test.sh  utility.hpp
benchmarks/cppa/: actor_creation.cpp  distributed.cpp  mailbox_performance.cpp  matching.cpp  mixed_case.cpp
benchmarks/erlang/: Makefile  mailbox_performance.erl  matching.erl
benchmarks/scala/: ActorCreation.scala  Distributed.scala  MailboxPerformance.scala  Makefile  Matching.scala  MixedCase.scala  Utility.scala
benchmarks/theron/: actor_creation.cpp  mailbox_performance.cpp  mixed_case.cpp
blob/: Makefile.am  c_context_impl.c  configure.ac  context_impl_test.cpp  cppa_fibre.c  cppa_fibre.h
doc/: CMakeLists.txt  Doxyfile.in  basp_header.graffle  basp_sequence.graffle  broker.graffle  mailbox.graffle  stream classes.graffle
doc/cmake/: Doxyfile.in  UseLATEX.cmake  caf-generate-rst.cpp  conf.py.in  index_footer.rst.in  index_header.rst.in  variables.tex.in
doc/graffle/: basp_header.graffle  basp_overview.graffle  flow.graffle  mailbox_element.graffle  operators.graffle  stealing.graffle
doc/tex/: Actors.tex  Brokers.tex  CommonPitfalls.tex  ConfiguringActorApplications.tex  Error.tex  FirstSteps.tex  GroupCommunication.tex  Introduction.tex  ManagingGroupsOfWorkers.tex  MessageHandlers.tex  MessagePassing.tex  Messages.tex  NetworkTransparency.tex  OpenCL.tex  ReferenceCounting.tex  Registry.tex  RemoteSpawn.tex  Streaming.tex  Testing.tex  TypeInspection.tex  UsingAout.tex  Utility.tex  conf.py  exec_pandoc.sh  explode_lstinputlisting.py  index.rst  index_footer.rst  index_header.rst  make_index_rst.py  manual.tex
examples/: CMakeLists.txt  FindLibcppa.cmake  Makefile.am  affinity_test.cpp  announce_example_1.cpp  announce_example_2.cpp  announce_example_3.cpp  announce_example_4.cpp  announce_example_5  announce_example_5.cpp  aout.cpp  caf-application.conf  caf-application.ini  dancing_kirby.cpp  dining_philosophers.cpp  distributed_math_actor_example.cpp  fibonacci.cpp  group_chat.cpp  group_server.cpp  hello_world.cpp  hello_world_example.cpp  math_actor_example.cpp  println.cpp  type_plugins.hpp
examples/broker/: protobuf_broker.cpp  simple_broker.cpp  simple_http_broker.cpp
examples/brokers/: protobuf_broker.cpp  simple_broker.cpp  simple_http_broker.cpp
examples/composition/: behavior_composition.cpp  calculator_behavior.cpp  dictionary_behavior.cpp
examples/compositions/: pipeline.cpp
examples/config/: read-json.cpp
examples/curl/: curl_fuse.cpp
examples/custom_type/: custom_types_1.cpp  custom_types_2.cpp  custom_types_3.cpp  custom_types_4.cpp
examples/custom_types/: custom_types_1.cpp  custom_types_2.cpp  custom_types_3.cpp
examples/dynamic_behavior/: dining_philosophers.cpp  skip_messages.cpp
examples/event_based_api/: dining_philosophers.cpp
examples/flow/: from-callable.cpp  iota.cpp  multicaster.cpp  observe-on.cpp  spsc-buffer-resource.cpp
examples/http/: client.cpp  multipart-reader.cpp  multipart-writer.cpp  rest.cpp  secure-time-server.cpp  time-server.cpp
examples/issue-973/: main.cpp
examples/length_prefix_framing/: chat-client.cpp  chat-server.cpp
examples/measurements/: four_udp.cpp  one_basp_tcp.cpp  one_basp_udp.cpp  one_raw_tcp.cpp  one_raw_udp.cpp
examples/message_passing/: after.cpp  calculator.cpp  cell.cpp  dancing_kirby.cpp  delegating.cpp  dining_philosophers.cpp  divider.cpp  (+11 more)
libcaf_core/: CMakeLists.txt  biicode.conf
libcaf_cuda/: .nfs0000000004bb9ba300000005  CMakeLists.txt  README.md  documentation.txt  main.test.cpp
libcaf_io/: CMakeLists.txt  bii.cmake  biicode.conf  main.test.cpp
libcaf_net/: CMakeLists.txt  ProtocolLayering.rst  main.test.cpp
libcaf_opencl/: CMakeLists.txt  README.md
libcaf_openssl/: CMakeLists.txt  main.test.cpp
libcaf_python/: CMakeLists.txt
libcaf_test/: CMakeLists.txt  README.md  test.cpp
robot/: CMakeLists.txt  README.md  cert.pem  dependencies.txt
tools/: CMakeLists.txt  caf-run.cpp  caf-vec.cpp
unit_testing/: CMakeLists.txt  FindLibcppa.cmake  Makefile  Makefile.am  hash_of.cpp  hash_of.hpp  main.cpp  ping_pong.cpp  ping_pong.hpp  test.cpp  test.hpp  test__a_matches_b.cpp  test__atom.cpp  test__fixed_vector.cpp  test__intrusive_containers.cpp  test__intrusive_ptr.cpp  test__local_group.cpp  test__match.cpp  test__pattern.cpp  test__primitive_variant.cpp  test__queue_performance.cpp  test__remote_actor.cpp  test__ripemd_160.cpp  test__serialization.cpp  test__spawn.cpp  test__sync_send.cpp  test__tuple.cpp  test__type_list.cpp  test__uniform_type.cpp  test__yield_interface.cpp  test_actor_lifetime.cpp  test_actor_pool.cpp  test_atom.cpp  test_broker.cpp  test_constructor_attach.cpp  test_continuation.cpp  test_custom_exception_handler.cpp  test_either.cpp  test_fixed_stack_actor.cpp  test_fixed_vector.cpp  (+29 more)
(+4486 files in other folders)
